--- a/affiliate/templates/affiliate-sharelinks.html
+++ b/affiliate/templates/affiliate-sharelinks.html
@@ -26,9 +26,7 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/gkVFggErEZ0" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/HqywmdMj0Bs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <div class="card">
@@ -53,6 +51,21 @@
                         <td>Twitter</td>
                         <td><a target="_blank" class="btn btn-primary"
                            href="https://facebook.com">Your Affiliate Link For Twitter</a></td>
+                    </tr>
+                    <tr>
+                        <td>Instagram</td>
+                        <td><a target="_blank" class="btn btn-primary"
+                           href="https://facebook.com">Your Affiliate Link For Instagram</a></td>
+                    </tr>
+                    <tr>
+                        <td>Text</td>
+                        <td><a target="_blank" class="btn btn-primary"
+                           href="https://facebook.com">Your Affiliate Link For Sending Text</a></td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td><a target="_blank" class="btn btn-primary"
+                           href="https://facebook.com">Your Affiliate Link For Email</a></td>
                     </tr>
                 </tbody>
             </table>
