--- a/affiliate/templates/home-affiliate.html
+++ b/affiliate/templates/home-affiliate.html
@@ -26,71 +26,18 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <iframe width="100%" height="515" src="https://www.youtube.com/embed/Iixhp8LhGIw" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <iframe width="100%" height="515" src="https://www.youtube.com/embed/INzewbWPK1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <a href="#"> <img
-                            src="https://images.pexels.com/photos/730547/pexels-photo-730547.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                            width="100%" alt="">
-                    </a>
-                </div>
-                <div class="card-header">
-                    <h4>Finance</h4>
-                </div>
-                <ol>
-                    <a href="/whitelabelpartnerportal/orders">Orders</a>
-                </ol>
-                <ol>
-                    <a href="/whitelabelpartnerportal/invoices">Invoices</a>
-                </ol>
-                <ol>
-                    <a href="/whitelabelpartnerportal/payments">Payments</a>
-                </ol>
-                <ol>
-                    <a href="/whitelabelpartnerportal/credits">Credits</a>
-                </ol>
-                <ol>
-                    <a href="/whitelabelpartnerportal/offeringfinancing">Financing You Can Offer Clients</a>
-                </ol>
-                <ol>
-                    <a href="/whitelabelpartnerportal/wholesalepackages">Wholesale Packages</a>
-                </ol>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <a href="#"> <img
-                            src="https://images.pexels.com/photos/669610/pexels-photo-669610.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                            width="100%" alt="">
-                    </a>
-                    <div class="card-header">
-                        <h4>Marketing Information</h4>
-                    </div>
-                    <ol>
-                        <a class="nav-link" href="/whitelabelpartnerportal/whitelabelwebinar">White Label Webinar</a>
-                    </ol>
-                    <ol>
-                        <a class="nav-link" href="/whitelabelpartnerportal/buywhitelabelwebsite">White Label Website</a>
-                    </ol>
-                </div>
-            </div>
-        </div>
-    </div>
+    <br><br>
     <div class="row">
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    White Label Training
+                    Lead Overview
                 </div>
                 <div class="card-body">
-                    <a href="/whitelabelpartnerportal/whitelabeltraining">
+                    <a href="/affiliate/leadoverview">
                         <img src="https://images.pexels.com/photos/1181435/pexels-photo-1181435.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                              width="100%" alt="">
                     </a></div>
@@ -108,7 +55,7 @@
                     My Residuals
                 </div>
                 <div class="card-body">
-                    <a href="/whitelabelpartnerportal/myresiduals">
+                    <a href="/affiliate/myresiduals">
                         <img src="https://images.pexels.com/photos/271168/pexels-photo-271168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                              width="100%" alt="">
                     </a></div>
@@ -122,7 +69,7 @@
                     Enter New Leads
                 </div>
                 <div class="card-body">
-                    <a href="/whitelabelpartnerportal/enternewleads">
+                    <a href="/affiliate/enternewleads">
                         <img src="https://images.pexels.com/photos/2182981/pexels-photo-2182981.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                              width="100%" alt="">
                     </a></div>
@@ -131,25 +78,65 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    Sign Up For Merchant Account
+                    My Sales
                 </div>
                 <div class="card-body">
-                    <a href="/whitelabelpartnerportal/merchant">
-                        <img src="https://images.pexels.com/photos/50987/money-card-business-credit-card-50987.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    <a href="/affiliate/mysales">
+                        <img src="https://images.pexels.com/photos/590041/pexels-photo-590041.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                              width="100%" alt="">
                     </a></div>
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    My Sales
+                    Marketing Links
                 </div>
                 <div class="card-body">
-                    <a href="/whitelabelpartnerportal/mysales">
-                        <img src="https://images.pexels.com/photos/590041/pexels-photo-590041.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    <a href="/affiliate/sharelinks">
+                        <img src="https://images.pexels.com/photos/6224/hands-people-woman-working.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                             width="100%" alt="">
+                    </a></div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    Network Marketing
+                </div>
+                <div class="card-body">
+                    <a href="/affiliate/networkmarketing">
+                        <img src="https://images.pexels.com/photos/2566581/pexels-photo-2566581.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                             width="100%" alt="">
+                    </a></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    Add Bank Account Information
+                </div>
+                <div class="card-body">
+                    <a href="/affiliate/addbankinfo">
+                        <img src="https://images.pexels.com/photos/351264/pexels-photo-351264.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                             width="100%" alt="">
+                    </a></div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    Add Paypal Information
+                </div>
+                <div class="card-body">
+                    <a href="/affiliate/addpaypalinfo">
+                        <img src="https://images.pexels.com/photos/3709402/pexels-photo-3709402.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                              width="100%" alt="">
                     </a></div>
             </div>
