--- a/getdinerotoday/templates/pages/base-affiliate.html
+++ b/getdinerotoday/templates/pages/base-affiliate.html
@@ -20,6 +20,7 @@
                   <li class="nav-item"><a href="{% url 'affiliate:leadoverview' %}" class="nav-link">Lead Overview</a></li>
                   <li class="nav-item"><a href="{% url 'affiliate:mysales' %}" class="nav-link">My Sales</a></li>
                   <li class="nav-item"><a href="{% url 'affiliate:networkmarketing' %}" class="nav-link">Network Marketing</a></li>
+                  <li class="nav-item"><a href="{% url 'affiliate:commission' %}" class="nav-link">Your Commission On Products</a></li>
                   <li class="nav-item">
                      <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none"> Marketing Information <span class="fa arrow"></span></span></a>
                      <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
