--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -135,6 +135,7 @@
                        <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:viewwhitelabelbusinesspackage'%}" class="nav-link"> View Your White Label Business Package (Only For Those Who Have Purchased)</a></li>
                      </ul>
                   </li>
+                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:partnercommisssions' %}" class="nav-link">Your Residual Commissions On Products</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:addbankinfo' %}" class="nav-link">Add Bank Account Information To Receive Payments *Or You Can Add Paypal Information*</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:addpaypalinfo' %}" class="nav-link">Add Paypal Information To Receive Payments</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:merchant' %}" class="nav-link">Sign Up For Merchant Account</a></li>
@@ -145,4 +146,3 @@
 {% endblock navigation %}
 {% block content %}
 {% endblock content %}
-
