--- a/whitelabelpartnerportal/templates/wholesalepackages.html
+++ b/whitelabelpartnerportal/templates/wholesalepackages.html
@@ -83,29 +83,10 @@
                             </tbody>
                             <tbody>
                             <tr>
-                                <td>Business Builder Program $280 Down & Two Monthly Payment Package</td>
-                                <td>$280 Down & Two Monthly Payments</td>
-                                <td>
-                                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                                        <input type="hidden" name="cmd" value="_s-xclick">
-                                        <input type="hidden" name="hosted_button_id" value="CELDB5VTDK6DC">
-                                        <input type="image"
-                                               src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif"
-                                               border="0" name="submit"
-                                               alt="PayPal - The safer, easier way to pay online!">
-                                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-                                             width="2" height="2">
-                                    </form>
-
-                                </td>
-                            </tr>
-                            </tbody>
-                            <tbody>
-                            <tr>
                                 <td>Merchant Account</td>
                                 <td>No Cost ($200 Sign Up Bonus)</td>
-                                <td><a target="_blank" class="btn btn-primary"
-                                       href="https://millennialbusinessbuilders.com/clientmerchantsignup.html">Sign Up
+                                <td><a class="btn btn-primary"
+                                       href="/whitelabelpartnerportal/merchant">Sign Up
                                     For Your Client</a></td>
                             </tr>
                             </tbody>
