--- a/affiliate/templates/affiliate-addbankinfo_form.html
+++ b/affiliate/templates/affiliate-addbankinfo_form.html
@@ -10,7 +10,7 @@
 
         <div class="card">
             <div class="card-header">
-                Edit Bank Account Information
+                Enter Bank Account Information
             </div>
 
             <div class="card-body">
