--- a/affiliate/templates/affiliate-enternewleads.html
+++ b/affiliate/templates/affiliate-enternewleads.html
@@ -6,15 +6,13 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12" style="margin-top: 40px">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/sJaMWvPb5yY" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/tFlxdkfVmn0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
 
         <div class="card">
             <div class="card-header">
-                Edit Leads
+                Enter New Leads
             </div>
             <div class="card-body">
                 <div class="col-md-12">
