--- a/affiliate/templates/affiliate-networkmarketing.html
+++ b/affiliate/templates/affiliate-networkmarketing.html
@@ -26,9 +26,7 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/gkVFggErEZ0" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/nTWur64idcY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <br>
@@ -42,26 +40,6 @@
                             allowfullscreen></iframe>
                     <div class="card-body">
                         <p class="card-text">Watch Video Above On Leveraging Your Network</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/miU1CDu5nkk" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    <div class="card-body">
-                        <p class="card-text">How To Present</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a href="https://docs.google.com/presentation/d/e/2PACX-1vT1NNKantmKStgWg4HYsDFlQ15a5eGpCWRwAxDkDqqwLDK8FP4U6B0YTE5FX4Jbtx3-uKd_zIvPQdx8/pub?start=false&loop=false&delayms=3000"
-                                   target="_blank">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View White Label
-                                        Presentation
-                                    </button>
-                                </a>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
