--- a/whitelabelpartnerportal/templates/buywhitelabelbusinesspackage.html
+++ b/whitelabelpartnerportal/templates/buywhitelabelbusinesspackage.html
@@ -50,42 +50,48 @@
                                     <li>Toll-Free Number for the entire year</li>
                                     <li>Fax Number for the entire year</li>
                                     <li>Professional Email Address</li>
-                                    <li>Virtual Address Set Up</li>
                                     <li>Merchant Account</li>
                                     <li>Full Portal Access For Life</li>
-                                    <li>Buy Authorized User Tradelines At 25% Off For Life</li>
-                                    <li>25% off all purchases in Millennial business builders store</li>
                                     <li>$500 In Free Advertising</li>
                                     <li>Google Ad Set-Up</li>
                                     <li>Facebook Ad Set up</li>
                                     <li>Paypal Button Integration For Payment Acceptance</li>
 
                                 </ul>
-                                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                                    <input type="hidden" name="cmd" value="_s-xclick">
-                                    <input type="hidden" name="hosted_button_id" value="2D7PYXGXCVZN4">
-                                    <input type="image"
-                                           src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif"
-                                           border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-                                         width="1" height="1">
-                                </form>
+                                <div class="col-md-12">
+                                  <h3><b>Choose From The Payment Options Below</b></h3>
+                                </div>
+                                <br>
+                                <div class="row">
+                                  <div class="col-md-4">
+                                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                                        <input type="hidden" name="cmd" value="_s-xclick">
+                                        <input type="hidden" name="hosted_button_id" value="2D7PYXGXCVZN4">
+                                        <input type="image"
+                                               src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif"
+                                               border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
+                                             width="1" height="1">
+                                    </form>
+                                  </div>
+                                  <div class="col-md-4">
+                                    <a href="https://ps5pp0525fdbx9ub-27821736015.shopifypreview.com/products_preview?preview_key=bda36855930da8a89f2c192498753014"
+                                       target="_blank">
+                                        <button type="button" class="btn btn-lg btn-block btn-primary">$42 Per Month Option
+                                        </button>
+                                    </a>
+                                  </div>
+                                  <div class="col-md-4">
+                                    <a href="https://millennialsbuildinggreatness.com/products/white-label-business-package"
+                                       target="_blank">
+                                        <button type="button" class="btn btn-lg btn-block btn-primary">One Payment Of $499
+                                            Option
+                                        </button>
+                                    </a>
+                                  </div>
+                                  </div>
 
-                                <br>
-                                <a href="https://ps5pp0525fdbx9ub-27821736015.shopifypreview.com/products_preview?preview_key=bda36855930da8a89f2c192498753014"
-                                   target="_blank">
-                                    <button type="button" class="btn btn-lg btn-block btn-primary">Click Here To Only
-                                        Pay 25% Down & Spread Payments Out Over 3 Monthly Payments With 0% Interest Down
-                                        Payment Option With Viabill
-                                    </button>
-                                </a>
-                                <br>
-                                <a href="https://millennialsbuildinggreatness.com/products/white-label-business-package"
-                                   target="_blank">
-                                    <button type="button" class="btn btn-lg btn-block btn-primary">One Payment Of $499
-                                        Option
-                                    </button>
-                                </a>
+                                </div>
 
 
                             </div>
