--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -197,7 +197,7 @@
                     <a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" class="nav-link"> Go To White Label Partner Portal </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'affiliate:home-affiliate' %}" class="nav-link"> Go To Affiliate Agent Portal </a>
+                    <a href="https://getdinerotoday.tapfiliate.com/" target="_blank" class="nav-link"> Go To Affiliate Agent Portal </a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'products:dnbproducts' %}" class="nav-link"> Purchase Dunn & Bradstreet Products</a>
