--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -119,7 +119,7 @@
                     <div class="card">
                         <div class="card-body">
                             <p>Go To Affiliate Agent Portal</p>
-                            <a class="btn btn-primary" href="{% url 'businesscreditcourse:home' %}" target="_blank">
+                            <a class="btn btn-primary" href="https://getdinerotoday.tapfiliate.com/" target="_blank">
                                 Click Here To Go To The <br> Affiliate Agent Portal
                             </a>
                         </div>
