--- a/business/templates/businessCreditStep.html
+++ b/business/templates/businessCreditStep.html
@@ -4,7 +4,8 @@
 {% block content %}
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2>Business Credit Steps You Need Done For You</h2></div>
+            <h2>Business Credit Steps You Need Done For You</h2>
+    </div>
     </div>
 
     <section class="main-content">
