--- a/chromeextention/templates/base-chromeextention.html
+++ b/chromeextention/templates/base-chromeextention.html
@@ -13,103 +13,108 @@
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
                     <li class="nav-item">
-                        <a href="{% url 'homepage' %}" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
+                        <a href="{% url 'homepage' %}" class="nav-link"><span
+                                class="toggle-none">Go Back To Main Portal</span></a>
+                    </li>
+                    {% if request.user.profile.virtual_access_card_paid %}
+                        <li class="nav-item">
+                            <a href="/{{ request.resolver_match.app_name }}/virtual-card" class="nav-link"><span
+                                    class="toggle-none">Virtual Card Access</span></a>
+                        </li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a href="{% url 'chromeextention:chromeextentionindex' %}" class="nav-link"><span
+                                class="toggle-none">Chrome Extension App For Python</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'goals:buildbusinesscredit' %}" class="nav-link"><span class="toggle-none">Build Business Credit & Access Business Credit That Isn't Personally Gauranteed</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/goals/upgrade" class="nav-link"><span class="toggle-none">upgrade to full business builder program with no money down</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/goals/business-credit-plan" class="nav-link"><span class="toggle-none">create my business credit building plan</span></a>
+                        <a href="{% url 'chromeextention:business-credit-plan' %}" class="nav-link"><span
+                                class="toggle-none">Create my business credit building plan</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">Business Credit Building <span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column " aria-expanded="false">
-                            <li class="nav-item"><a href="/goals/business-entity"
+                            <li class="nav-item"><a href="/chromeextention/business-entity"
                                                     class="nav-link">Business
                                 Entity</a></li>
-                            <li class="nav-item"><a href="/goals/ein" class="nav-link">EIN
+                            <li class="nav-item"><a href="/chromeextention/ein" class="nav-link">EIN
                                 Number</a></li>
-                            <li class="nav-item"><a href="/goals/business-license"
+                            <li class="nav-item"><a href="/chromeextention/business-license"
                                                     class="nav-link">Business
                                 License</a></li>
                             <li class="nav-item"><a
-                                    href="/goals/website-creation-options"
+                                    href="/chromeextention/website-creation-options"
                                     class="nav-link">Website
                                 Creation</a></li>
-                            <li class="nav-item"><a href="/goals/fax-number-options"
+                            <li class="nav-item"><a href="/chromeextention/fax-number-options"
                                                     class="nav-link">Fax
                                 Number</a></li>
-                            <li class="nav-item"><a href="/goals/four-eleven"
+                            <li class="nav-item"><a href="/chromeextention/four-eleven"
                                                     class="nav-link">411
                                 Listings</a></li>
-                            <li class="nav-item"><a href="/goals/professional-email"
+                            <li class="nav-item"><a href="/chromeextention/professional-email"
                                                     class="nav-link">Professional
                                 Email Address</a></li>
-                            <li class="nav-item"><a href="/goals/domain"
+                            <li class="nav-item"><a href="/chromeextention/domain"
                                                     class="nav-link">Domain</a></li>
-                            <li class="nav-item"><a href="/goals/toll-free-options"
+                            <li class="nav-item"><a href="/chromeextention/toll-free-options"
                                                     class="nav-link">Toll Free
                                 Number</a></li>
-                            <li class="nav-item"><a href="/goals/virtual-address"
+                            <li class="nav-item"><a href="/chromeextention/virtual-address"
                                                     class="nav-link">Virtual
                                 Address</a></li>
-                            <li class="nav-item"><a href="/goals/business-bank-account"
+                            <li class="nav-item"><a href="/chromeextention/business-bank-account"
                                                     class="nav-link">Business
                                 Bank Account</a></li>
-                            <li class="nav-item"><a href="/goals/merchant-account"
+                            <li class="nav-item"><a href="/chromeextention/merchant-account"
                                                     class="nav-link">Merchant
                                 Account</a></li>
-                            <li class="nav-item"><a href="/goals/duns" class="nav-link">Duns
+                            <li class="nav-item"><a href="/chromeextention/duns" class="nav-link">Duns
                                 Number</a></li>
-                            <li class="nav-item"><a href="/goals/sic" class="nav-link">SIC
+                            <li class="nav-item"><a href="/chromeextention/sic" class="nav-link">SIC
                                 & NAISC Codes</a>
                             </li>
-                            <li class="nav-item"><a href="/goals/business-good-standing"
+                            <li class="nav-item"><a href="/chromeextention/business-good-standing"
                                                     class="nav-link">Checking
                                 If Your Business Is In Good Standing </a></li>
                             <li class="nav-item"><a
-                                    href="/goals/business-in-good-standing"
+                                    href="/chromeextention/business-in-good-standing"
                                     class="nav-link">How
                                 To Get Your Business Back In Good Standing</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a href="/goals/business-credit-step" class="nav-link"><span class="toggle-none">choose business credit building steps you need done for you</span></a>
-                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span
                                 class="toggle-none"> Business Credit Bureaus To Become Established With  <span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                            <li class="nav-item"><a href="/goals/experian" class="nav-link"> Experian
+                            <li class="nav-item"><a href="/chromeextention/experian" class="nav-link"> Experian
                                 Business </a></li>
-                            <li class="nav-item"><a href="/goals/dunn-brad" class="nav-link"> Dunn &
+                            <li class="nav-item"><a href="/chromeextention/dunn-brad" class="nav-link"> Dunn &
                                 Bradsheet </a></li>
-                            <li class="nav-item"><a href="/goals/equifax" class="nav-link"> Equifax
+                            <li class="nav-item"><a href="/chromeextention/equifax" class="nav-link"> Equifax
                                 Business </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'businesscreditcourse:home' %}" class="nav-link"><span class="toggle-none">business credit building course</span></a>
                     </li>
-                   <li class="nav-item">
-                    <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Corporate Credit List<span
-                            class="fa arrow"></span></span></a>
-                    <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                        <li class="nav-item"><a href="/goals/vendor-list" class="nav-link">Starter Vendor
-                            List</a></li>
-                        <li class="nav-item"><a href="/goals/store-credit-vendor-list" class="nav-link">Store
-                            Credit Vendor List</a></li>
-                        <li class="nav-item"><a href="/goals/business-credit-vendor" class="nav-link">Revolving
-                            Business Credit Vendor List</a></li>
-                        <li class="nav-item"><a href="/goals/cc-credit-vendor" class="nav-link">Credit
-                            Card No Personal Gaurantee Vendor List</a></li>
-                    </ul>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span
+                                class="toggle-none">Corporate Credit List<span
+                                class="fa arrow"></span></span></a>
+                        <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
+                            <li class="nav-item"><a href="/chromeextention/vendor-list" class="nav-link">Starter Vendor
+                                List</a></li>
+                            <li class="nav-item"><a href="/chromeextention/store-credit-vendor-list" class="nav-link">Store
+                                Credit Vendor List</a></li>
+                            <li class="nav-item"><a href="/chromeextention/business-credit-vendor" class="nav-link">Revolving
+                                Business Credit Vendor List</a></li>
+                            <li class="nav-item"><a href="/chromeextention/cc-credit-vendor" class="nav-link">Credit
+                                Card No Personal Gaurantee Vendor List</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
