--- a/whitelabelpartnerportal/templates/buywhitelabelbusinesspackage.html
+++ b/whitelabelpartnerportal/templates/buywhitelabelbusinesspackage.html
@@ -64,28 +64,29 @@
                                 <br>
                                 <div class="row">
                                   <div class="col-md-4">
+                                    <h4>One Time Payment $499</h4>
                                     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                                        <input type="hidden" name="cmd" value="_s-xclick">
-                                        <input type="hidden" name="hosted_button_id" value="2D7PYXGXCVZN4">
-                                        <input type="image"
-                                               src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif"
-                                               border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-                                             width="1" height="1">
+                                      <input type="hidden" name="cmd" value="_s-xclick">
+                                      <input type="hidden" name="hosted_button_id" value="3NG5YBR6CBH44">
+                                      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                                     </form>
+
                                   </div>
                                   <div class="col-md-4">
-                                    <a href="https://ps5pp0525fdbx9ub-27821736015.shopifypreview.com/products_preview?preview_key=bda36855930da8a89f2c192498753014"
-                                       target="_blank">
-                                        <button type="button" class="btn btn-lg btn-block btn-primary">$42 Per Month Option
-                                        </button>
-                                    </a>
+                                    <h4>$42 Per Month Option </h4>
+                                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                      <input type="hidden" name="cmd" value="_s-xclick">
+                                      <input type="hidden" name="hosted_button_id" value="CJ8EEN5BLFA22">
+                                      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                                    </form>
+
                                   </div>
                                   <div class="col-md-4">
                                     <a href="https://millennialsbuildinggreatness.com/products/white-label-business-package"
                                        target="_blank">
-                                        <button type="button" class="btn btn-lg btn-block btn-primary">One Payment Of $499
-                                            Option
+                                        <button type="button" class="btn btn-lg btn-block btn-primary">One Payment Of $499 <br>Option (Financing)
                                         </button>
                                     </a>
                                   </div>
