--- a/whitelabelpartnerportal/templates/buywhitelabelwebsite.html
+++ b/whitelabelpartnerportal/templates/buywhitelabelwebsite.html
@@ -41,14 +41,12 @@
                         <p class="card-text">Watch The Video Above To See How To Purchase Your White Label Website With
                             Only Payinh 25% Down At 0% Interest</p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a href="https://millennialsbuildinggreatness.com/products/millennials-business-builders-white-label-website"
-                                   target="_blank">
-                                    <button type="button" class="btn btn-sm btn-primary">Click Here To Purchase Your
-                                        White Label Website
-                                    </button>
-                                </a>
-                            </div>
+                          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                            <input type="hidden" name="cmd" value="_s-xclick">
+                            <input type="hidden" name="hosted_button_id" value="5PX7H5MUWWA86">
+                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                          </form>
                         </div>
                     </div>
                 </div>
@@ -85,13 +83,12 @@
                             <li>White Label Website With Your Branding</li>
                         </ul>
                         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                            <input type="hidden" name="cmd" value="_s-xclick">
-                            <input type="hidden" name="hosted_button_id" value="QBPK85FNURWJS">
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif"
-                                   border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="2"
-                                 height="2">
+                          <input type="hidden" name="cmd" value="_s-xclick">
+                          <input type="hidden" name="hosted_button_id" value="5PX7H5MUWWA86">
+                          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         </form>
+
                         <br>
                         <a href="https://millennialsbuildinggreatness.com/products/white-label-website" target="_blank">
                             <button type="button" class="btn btn-lg btn-block btn-primary">Click Here To Only Pay 25%
