--- a/chromeextention/templates/base-chromeextention.html
+++ b/chromeextention/templates/base-chromeextention.html
@@ -9,7 +9,7 @@
                     <p class="lead margin-b-0 toggle-none">
                         {{ request.user.get_full_name }}
                     </p>
-                    <p class="text-muted mv-0 toggle-none">Welcome</p>
+                    <p class="text-muted mv-0 toggle-none">Welcome To The Chrome Extension App Portal</p>
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
                     <li class="nav-item">
@@ -42,33 +42,17 @@
                             <li class="nav-item"><a href="/chromeextention/business-license"
                                                     class="nav-link">Business
                                 License</a></li>
-                            <li class="nav-item"><a
-                                    href="/chromeextention/website-creation-options"
-                                    class="nav-link">Website
-                                Creation</a></li>
-                            <li class="nav-item"><a href="/chromeextention/fax-number-options"
-                                                    class="nav-link">Fax
-                                Number</a></li>
                             <li class="nav-item"><a href="/chromeextention/four-eleven"
                                                     class="nav-link">411
                                 Listings</a></li>
-                            <li class="nav-item"><a href="/chromeextention/professional-email"
-                                                    class="nav-link">Professional
-                                Email Address</a></li>
-                            <li class="nav-item"><a href="/chromeextention/domain"
-                                                    class="nav-link">Domain</a></li>
-                            <li class="nav-item"><a href="/chromeextention/toll-free-options"
-                                                    class="nav-link">Toll Free
-                                Number</a></li>
+
                             <li class="nav-item"><a href="/chromeextention/virtual-address"
                                                     class="nav-link">Virtual
                                 Address</a></li>
                             <li class="nav-item"><a href="/chromeextention/business-bank-account"
                                                     class="nav-link">Business
                                 Bank Account</a></li>
-                            <li class="nav-item"><a href="/chromeextention/merchant-account"
-                                                    class="nav-link">Merchant
-                                Account</a></li>
+
                             <li class="nav-item"><a href="/chromeextention/duns" class="nav-link">Duns
                                 Number</a></li>
                             <li class="nav-item"><a href="/chromeextention/sic" class="nav-link">SIC
@@ -83,6 +67,24 @@
                                 To Get Your Business Back In Good Standing</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item"><a
+                            href="/chromeextention/website-creation-options"
+                            class="nav-link">Website
+                        Creation</a></li>
+                    <li class="nav-item"><a href="/chromeextention/fax-number-options"
+                                            class="nav-link">Fax
+                        Number</a></li>
+                    <li class="nav-item"><a href="/chromeextention/professional-email"
+                                            class="nav-link">Professional
+                        Email Address</a></li>
+                    <li class="nav-item"><a href="/chromeextention/domain"
+                                            class="nav-link">Domain</a></li>
+                    <li class="nav-item"><a href="/chromeextention/toll-free-options"
+                                            class="nav-link">Toll Free
+                        Number</a></li>
+                        <li class="nav-item"><a href="/chromeextention/merchant-account"
+                                                class="nav-link">Merchant
+                            Account</a></li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span
@@ -115,6 +117,9 @@
                                 Card No Personal Gaurantee Vendor List</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item"><a href="/chromeextention/business-credit-monitoring" class="nav-link">Business Credit Monitoring</a></li>
+
+
                 </ul>
             </div>
         </div>
