--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -92,6 +92,15 @@
                                 Here To Login To Your <br> Portal To Apply For Loans</a>
                         </div>
                     </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <p>Google Chrome Extension Portal</p>
+                            <a class="btn btn-primary" href="{% url 'chromeextention:chromeextentionindex' %}" target="_blank">Click
+                                Here To Go To The <br>Google Chrome Extension Portal</a>
+                        </div>
+                    </div>
+
                     <div class="card">
                         <div class="card-body">
                             <p>Create Your Specific Portal / <br> View Saved Portals</p>
