user data model + fetch data api endpoint

--- a/business/templates/userData/userData.html
+++ b/business/templates/userData/userData.html
@@ -111,6 +111,18 @@
                         </div>
                     </div>
 
+                    <div class="row mb-2">
+                        <div class="col-4">
+                            {{ form.personal_phone.label_tag }}{{ form.personal_phone }}
+                        </div>
+                        <div class="col-4">
+                            {{ form.business_phone.label_tag }}{{ form.business_phone }}
+                        </div>
+                        <div class="col-4">
+                            {{ form.billing_phone.label_tag }}{{ form.billing_phone }}
+                        </div>
+                    </div>
+
 
 {#                        {{ form }}#}
                         <div class="btn-toolbar">
