--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -104,7 +104,7 @@
                     <div class="card">
                         <div class="card-body">
                             <p>Create Your Specific Portal / <br> View Saved Portals</p>
-                            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'business:create_specific_portal' %}" target="_blank">
                                 Click Here To Create Your Specific <br>Portal & View Your Saved Portals
                             </a>
                         </div>
@@ -112,16 +112,8 @@
                     <div class="card">
                         <div class="card-body">
                             <p>Choose Your Goal With This Platform</p>
-                            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'business:goals' %}" target="_blank">
                                 Click Here To Choose <br>Your Goal With This Platform
-                            </a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <p>Go To White Label Partner Portal</p>
-                            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" target="_blank">
-                                Click Here To Go To The White <br> Label Partner Portal
                             </a>
                         </div>
                     </div>
@@ -136,7 +128,7 @@
                     <div class="card">
                         <div class="card-body">
                             <p>Purchase Dunn & Bradstreet Products</p>
-                            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'products:dnbproducts' %}" target="_blank">
                                 Click Here To Go Purchase <br> Dunn & Bradstreet Products <br>To Grow Your Business
                             </a>
                         </div>
