--- a/goals/templates/makeextramoney/makeextramoney.html
+++ b/goals/templates/makeextramoney/makeextramoney.html
@@ -34,30 +34,13 @@
         <div class="row">
             <div class="col-md-6 col-sm-6">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                         height="370px" width="100%" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Click The Button Below To Enter The White Label Partner Portal</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" target="_blank"
-                                   class="btn btn-primary">
-                                    Enter White Label Partner Portal
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-                <div class="card mb-4 shadow-sm">
                     <img src="https://images.pexels.com/photos/2068975/pexels-photo-2068975.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                          height="370px" width="100%" alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Enter The Affiliate Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="{% url 'affiliate:home-affiliate' %}" target="_blank" class="btn btn-primary">Enter
+                                <a href="https://getdinerotoday.tapfiliate.com/" target="_blank" class="btn btn-primary">Enter
                                     Affiliate Portal</a>
                             </div>
                         </div>
