--- a/chromeextention/templates/chromeextention-index.html
+++ b/chromeextention/templates/chromeextention-index.html
@@ -7,19 +7,8 @@
 <!-- ============================================================== -->
 {% block content %}
     <div class="page-header">
-        <h2>Chrome Extension App Introduction</h2>
+        <h2>Chrome Extension App For Python</h2>
     </div>
     <section class="main-content">
-        <div class="row">
-            <div class="col-md-12">
-              <<iframe width="100%" height="515" src="https://www.youtube.com/embed/IorqkfldKY8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card-body">
-                    <center><h3>Watch The Video Above To Learn How To Use The Chrome Extension App Portal</center>
-                </div>
-            </div>
     </section>
 {% endblock %}
